<resources>
    <string name="app_name">Amazing Bakery</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_int_button_text">Sign In</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="city">City</string>
    <string name="phone">Phone Number</string>
    <string name="address_hint">Address</string>
    <string name="name_hint">Name</string>
    <string name="description">proudct image</string>
    <string name="add_cart">+</string>
    <string name="checkout">Checkout</string>
    <string name="price_total">$0</string>
</resources>
