<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <EditText
        android:id="@+id/s_email"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/s_passphrase"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/s_signup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_address"
        android:layout_alignStart="@+id/s_email"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="24dp"
        android:background="@color/my_buttons"
        android:fontFamily="monospace"
        android:onClick="signUp"
        android:text="@string/sign_up_button_text"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/s_name"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/s_city"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_country"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="text" />

    <EditText
        android:id="@+id/s_phone"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_city"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone" />

    <Spinner
        android:id="@+id/s_country"
        android:layout_width="297dp"
        android:layout_height="40dp"
        android:layout_below="@+id/s_passphrase"
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="18dp"
        android:entries="@array/country_array"
        tools:listitem="" />

    <EditText
        android:id="@+id/s_address"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/s_phone"
        android:layout_alignStart="@+id/s_email"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/address_hint"
        android:inputType="text" />
</RelativeLayout>
</android.support.v4.widget.NestedScrollView>